k8s/production/spack/slack-spack-io/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-spack-io
  namespace: spack
  labels:
    app: slack-spack-io
    svc: web
spec:
  selector:
    matchLabels:
      app: slack-spack-io
      svc: web
  replicas: 1
  template:
    metadata:
      labels:
        app: slack-spack-io
        svc: web
    spec:
      containers:
      - name: web
        image: "spack/slackin-extended:latest"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 20m
            memory: 65M
        ports:
        - name: http
          containerPort: 80
      nodeSelector:
        spack.io/node-pool: base
