k8s/production/spack/slack-spack-io/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slack-spack-io
  namespace: spack
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: tls-slack
  rules:
  - host: slack.spack.io
    http:
      paths:
      - backend:
          service:
            name: slack-spack-io
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
